--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - ${SRC_POSTGRES_PORT}:5432
     volumes:
-      - ./source_data:/docker-entrypoint-initdb.d
+      - ./data/source_data:/docker-entrypoint-initdb.d
       # - source-volume:/var/lib/postgresql/data
     networks:
       - mentoring-networks
@@ -26,7 +26,7 @@ services:
     ports:
       - ${STG_POSTGRES_PORT}:5432
     volumes:
-      - ./staging_data:/docker-entrypoint-initdb.d
+      - ./data/staging_data:/docker-entrypoint-initdb.d
       # - staging-volume:/var/lib/postgresql/data
     networks:
       - mentoring-networks
@@ -42,7 +42,7 @@ services:
     ports:
       - ${WH_POSTGRES_PORT}:5432
     volumes:
-      - ./warehouse_data:/docker-entrypoint-initdb.d
+      - ./data/warehouse_data:/docker-entrypoint-initdb.d
       # - warehouse-volume:/var/lib/postgresql/data
     networks:
       - mentoring-networks
@@ -58,7 +58,7 @@ services:
     ports:
       - ${LOG_POSTGRES_PORT}:5432
     volumes:
-      - ./log_data:/docker-entrypoint-initdb.d
+      - ./data/log_data:/docker-entrypoint-initdb.d
       # - log-volume:/var/lib/postgresql/data
     networks:
       - mentoring-networks
